# yuru-auto-backup-gdrive

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_dir.rs  backup.rs  commands.rs  config.rs  drive_detector.rs  drive_waiter.rs  lib.rs  logger.rs  main.rs  scheduler.rs
src/lib/: api.ts  format.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/logs/: +page.svelte
src/routes/settings/: +page.svelte
