[package]
name = "yuru-auto-backup-gdrive"
version = "0.1.0"
description = "Daily automatic backup of Premiere Pro project files to a Google Drive-synced folder."
authors = ["nkojima"]
edition = "2021"

[lib]
name = "yuru_auto_backup_gdrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

