[package]
name = "yuru-auto-backup-gdrive"
version = "0.1.0"
description = "Daily automatic backup of Premiere Pro project files to a Google Drive-synced folder."
authors = ["kyaoNK"]
edition = "2021"

[lib]
name = "yuru_auto_backup_gdrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
walkdir = "2"
regex = "1"
tokio = { version = "1", features = ["rt", "time", "sync"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
